tests/instantiating/invalid/range_width_conflict_same_element/bus.fbd
main bus
	foo config
		range = [1, 5]
		width = 10
